force-app/main/default/objects/Resource_Role__c/fields/Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to identify whether this Resource Role needs Leave Request Auto Approve or Not.</description>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>