force-app/main/default/objects/Resource_Role__c/fields/Eligible_for_Recognise__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Recognise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Recognise ?</label>
    <type>Checkbox</type>
</CustomField>