force-app/main/default/objects/Resource_Role__c/fields/goals_and_results__c.field-meta.xml
<CustomField>
    <fullName>goals_and_results__c</fullName>
    <description>This field is used to decide how much Goals and Results will be considered for rating</description>
    <label>Goals and Results</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>