force-app/main/default/objects/Resource_Role__c/fields/Notice_Consider_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Consider_Days__c</fullName>
    <label>Notice Consider Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>