force-app/main/default/objects/Resource_Role__c/fields/Probation_Days__c.field-meta.xml
<CustomField>
    <fullName>Probation_Days__c</fullName>
    <label>Probation Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>