force-app/main/default/objects/Resource_Role__c/fields/professional_skills__c.field-meta.xml
<CustomField>
    <fullName>professional_skills__c</fullName>
    <description>This field is used to decide how much Professional Skills will be considered for rating</description>
    <label>Professional Skills</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>