force-app/main/default/objects/Resource_Role__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To ?</label>
    <referenceTo>Resource_Role__c</referenceTo>
    <relationshipLabel>Resource Roles</relationshipLabel>
    <relationshipName>Resource_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>