force-app/main/default/objects/Resource_Role__c/fields/strategic_impact__c.field-meta.xml
<CustomField>
    <fullName>strategic_impact__c</fullName>
    <description>This field is used to decide how much Strategic Impact will be considered for rating</description>
    <label>Strategic Impact</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>