force-app/main/default/objects/Resource_Role__c/fields/technical_acumen__c.field-meta.xml
<CustomField>
    <fullName>technical_acumen__c</fullName>
    <description>This field is used to decide how much technical acumen will be considered for rating</description>
    <label>Technical Acumen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>