force-app/main/default/objects/Resource_Role__c/validationRules/Probation_day_cannot_more_than_180.validationRule-meta.xml
<ValidationRule>
    <fullName>Probation_day_cannot_more_than_180</fullName>
    <active>true</active>
    <errorConditionFormula>Probation_Days__c &gt;180</errorConditionFormula>
    <errorMessage>Probation Days must be less than 180</errorMessage>
</ValidationRule>