force-app/main/default/objects/Resource_Role__c/validationRules/Restrict_the_approval_hiearchy.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_the_approval_hiearchy</fullName>
    <active>true</active>
    <errorConditionFormula>Level_of_Approval__c &gt; 3</errorConditionFormula>
    <errorMessage>The maximum level of approval is 3. Please enter the approval hierarchy below 3 level.</errorMessage>
</ValidationRule>