force-app/main/default/objects/Resource_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Level_of_Approval__c</columns>
    <columns>Auto_Approve__c</columns>
    <columns>Probation_Days__c</columns>
    <columns>Notice_Consider_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>