force-app/main/default/objects/Resource_Role__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Reports_To__c</columns>
    <columns>Active__c</columns>
    <columns>Level_of_Approval__c</columns>
    <columns>Auto_Approve__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>